# sports-betting

./: .copier-answers.yml  .coveragerc  .editorconfig  .gitignore  .pdm-python  .pre-commit-config.yaml  .prefectignore  .readthedocs.yml  .travis.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  appveyor.yml  download_soccer_data.py  environment.yml  mkdocs.yml  nfl.py  nfl_requirements.txt  noxfile.py  prefect.yaml  properdocs.yml  pyproject.toml  requirements.docs.txt  requirements.format.txt  requirements.txt  setup.cfg  setup.py  setup2.py  soccer.py
.circleci/: config.yml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yaml  config.yml  feature_request.yaml
.github/workflows/: ci-docs.yml  ci.yml  doc.yml  equivalence.yml  release.yml
.prefect/: flows.json
.specify/: feature.json  init-options.json  integration.json
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
conda-recipe/: conda_deployment.sh
conda-recipe/sports-bet/: bld.bat  meta.yaml
conda-recipe/sports-betting/: meta.yaml
configs/: main_leagues_ml.py
configs/bettors/: random_forest.py
configs/dataloaders/: main_leagues.py
configs/datasets/: fixtures.py  nba.py  odds_types.py  params.py  training.py
configs/evaluation/: classifier.py  classifier_grid_search_cv.py  odds_comparison.py  odds_comparison_grid_search_cv.py
data/nfl/modelling/: odds_nfl_season_2004.csv  odds_nfl_season_2005.csv  odds_nfl_season_2006.csv  odds_nfl_season_2007.csv  odds_nfl_season_2008.csv  odds_nfl_season_2009.csv  odds_nfl_season_2010.csv  odds_nfl_season_2011.csv  odds_nfl_season_2012.csv  odds_nfl_season_2013.csv  odds_nfl_season_2014.csv  odds_nfl_season_2015.csv  odds_nfl_season_2016.csv  odds_nfl_season_2017.csv  odds_nfl_season_2018.csv  odds_nfl_season_2019.csv  odds_nfl_season_2020.csv  odds_nfl_season_2021.csv  odds_nfl_season_2023.csv  odds_nfl_season_2024.csv
data/nfl/processed/: nfl_data_sc_lines_nfl_season_2000.csv  nfl_data_sc_lines_nfl_season_2001.csv  nfl_data_sc_lines_nfl_season_2002.csv  nfl_data_sc_lines_nfl_season_2003.csv  nfl_data_sc_lines_nfl_season_2006.csv  nfl_data_sc_lines_nfl_season_2007.csv  nfl_data_sc_lines_nfl_season_2008.csv  nfl_data_sc_lines_nfl_season_2009.csv  nfl_data_sc_lines_nfl_season_2010.csv  nfl_data_sc_lines_nfl_season_2011.csv  nfl_data_sc_lines_nfl_season_2012.csv  nfl_data_sc_lines_nfl_season_2013.csv  nfl_data_sc_lines_nfl_season_2014.csv  nfl_data_sc_lines_nfl_season_2015.csv  nfl_data_sc_lines_nfl_season_2016.csv  (+23 more)
doc/: about.rst  api.rst  conf.py  conftest.py  contribute.rst  functionality.rst  gsmote.rst  index.rst  install.rst  introduction.rst  release_history.rst  sportsbet.rst  test.rst  user_guide.rst
doc/_templates/: class.rst
doc/additional_information/: contribute.rst  dependencies.rst  developers.rst  installation.rst  release_history.rst  testing.rst
doc/getting_started/: installation.rst  introduction.rst
doc/main_documentation/: api.rst  basic.rst  datasets.rst  evaluation.rst  models.rst  user_guide.rst
docs/: README.md.jinja  gallery_conf.py  generate_api.py
docs/binder_cfg/: requirements.txt
docs/css/: material.css  style.css
docs/development/: index.md
docs/examples/: README.md  plot_soccer_data.py
docs/interfaces/: agents.md  cli.md  index.md
docs/javascripts/: mathjax.js
docs/practice/: betting_moment.md  index.md  value_betting.md
examples/: README.txt  download.py  extract_fd_soccer_data.py  extract_fte_soccer_data.py  extract_soccer_data.py
examples/machine-learning/: README.txt  estimate_soccer_value_bets.py  evaluate_soccer_model.py
examples/modelling/: README.txt  evaluate_classifier_bettor.py
gui/: .gitignore  main.py  requirements.txt  rxconfig.py
gui/app/: __init__.py  app.py  dataloader_creation.py  dataloader_loading.py  index.py
gui/gui/: __init__.py  gui.py  template.py
specs/001-in-play-betting/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-data-source-providers/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-basketball-euroleague/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-nba-espn-source/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-agent-facing-surfaces/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
sportsbet/: __init__.py  base.py  config.py  externals.py  utils.py
sportsbet/backtesting/: __init__.py  _betting.py  _optimization.py
sportsbet/datasets/: __init__.py  _base.py  _dummy.py  _utils.py
sportsbet/evaluation/: __init__.py  _base.py  _classifier.py
sportsbet/scripts/: __init__.py  backtest_classifier  backtesting  download  evaluate  evaluate_classifier  fetch_data  fetch_training_data  fit_dump_classifier  predict  train
sportsbet/soccer/: __init__.py  classification.py  config.py  configuration.py  data.py  download_data.py  modelling_odds.py  optimization.py  runner.py
sportsbet/tests/: test_base.py  test_externals.py
sportsbet/utils/: __init__.py  _externals.py
src/sportsbet/: __init__.py  __main__.py  _config.py  _selection.py  cli.py
tests/: __init__.py  conftest.py  reference.py  test_cli.py  test_mcp.py
tests/cli/: __init__.py  test_betting.py  test_bettor.py  test_data.py  test_dataloader.py  test_datasets.py  test_evaluation.py  test_main.py  test_model.py  test_parity.py
tests/datasets/: __init__.py  test_base.py  test_basketball.py  test_dummy.py  test_equivalence.py  test_euroleague.py  test_extraction.py  test_football_data.py  test_leakage.py  test_nba.py  test_odds_api.py  test_prepare.py  test_resolver.py  test_schema.py  test_soccer.py  test_sources.py  test_sources_choice.py  test_store.py
tests/evaluation/: __init__.py  test_base.py  test_classifier.py  test_model_selection.py  test_rules.py
tests/samples/: odds.csv  reference_fingerprint.json  stats.csv
(+1975 files in other folders)
